webroot/index.css
@font-face {
  font-family: 'Goudy Old Style';
  font-style: normal;
  font-weight: normal;
  src: local('Goudy Old Style'), url('fonts/GOUDOS.woff') format('woff');
  font-display: swap;
}

h1 {
  font-size: 1em;
}

html, body {
  margin: 0px;
  padding: 0px;
  height: 100%;
  width: 100%;
  display: grid;
}

body {
  grid-template-rows: 8em auto;
  grid-template-columns: auto;
  background: var(--base3);
  color: var(--base02);
}

#github {
  display: flex;
  align-items: center
}

#github > svg {
  fill: var(--base02);
}

#left-header {
  align-self: stretch;
  grid-template-rows: auto auto;
  display: grid;
}

#left-header > div:nth-child(1) {
  padding-top: 1.1em;
}

#left-header > div:nth-child(2) {
  align-self: flex-end;
}

#search-container {
  align-items: flex-end;
  display: grid;
  grid-template-rows: auto;
  grid-template-columns: 3em auto;
}

#security-text {
  font-family: 'Monospace';
  border-right: 1px solid var(--base01);
  border-left: none;
  border-top: 1px solid var(--base01);
  border-bottom: none;
  background-color: var(--base2);
  border-radius: 0px 10px 0px 0px;
  padding: 0px;
  height: 2rem;
  padding-left: 10px;
  padding-right: 10px;
  color: var(--base02);
}

#exchange-container {
  background-color: var(--base2);
  border-top: 1px solid var(--base01);
  height: 1em;
  border-radius: 10px 0px 0px 0px;
  border-left: 1px solid var(--base01);
  border-right: 1px solid var(--base01);
  display: flex;
  align-items: center;
}

#exchange-container > img {
  height: 1.2rem;
  padding-left: 10px;
}

#exchange-container > svg {
  height: 1.2rem;
  padding-left: 10px;
}

#header {
  grid-column-start: 1;
  grid-column-end: 5;
  grid-row-start: 1;
  grid-row-end: 2;
  font-size: 2em;
  font-family: 'Goudy Old Style';
  display: grid;
  grid-template-columns: 400px auto 400px;
  padding-left: calc(50% - 800px);
  padding-right: calc(50% - 800px);
}

#sections {
  font-size: 0.6em;
  text-align: center;
  display: grid;
  justify-content: center;
  align-items: center;
  grid-template-columns: auto auto auto auto;
}

#sections > span {
  padding-left: 1em;
  padding-right: 1em;
  user-select: none;
}

#center-navigation {
  text-align: center;
  display: grid;
  align-items: center;
  justify-content: center;
  border-bottom: 1px solid var(--base01);
}

#misc-content {
  border-bottom: 1px solid var(--base01);
}

#header-name {
  user-select: none;
  border-bottom: 1px solid var(--base0);
}

#navigation-bar > span {
  text-align: center;
  cursor: pointer;
}

#header-bar {
  grid-column-start: 1;
  grid-column-end: 5;
  grid-row-start: 1;
  grid-row-end: 1;
  display: grid;
  align-items: center;
  justify-content: center;
  font-family: 'Inconsolata', monospace;
  font-size: 1em;
  grid-template-rows: 2em;
  grid-template-columns: auto auto auto auto auto auto;
}

#header-bar > span {
  margin: 10px;
  display: inline-flex;
  justify-content: center;
  align-items: center;
}

#header-bar > span > span {
  margin: 2px;
}

#security-bar {
  grid-row-start: 3;
  grid-row-end: 3;
  grid-column-start: 1;
  grid-column-end: 5;
  padding-left: calc(50% - 800px);
  padding-right: calc(50% - 800px);
  display: flex;
  align-items: flex-end;
}

#exchange {
  display: flex;
  align-items: center;
  display: flex;
  align-items: center;
  min-width: 25%;
  min-height: 75%;
}

#exchange-button {
  display: flex;
  align-items: center;
  width: 1.7em;
  height: 1.7em;
}

#dash {
  grid-row-start: 2;
  grid-row-end: 3;
  grid-column-start: 1;
  grid-column-end: 5;
  padding-left: calc(50% - 800px);
  padding-right: calc(50% - 798px);
  display: grid;
  grid-template-columns: auto;
  grid-template-rows: calc(100% - 2em);
}

#chart {
  display: flex;
  align-items: center;
  grid-column-start: 1;
  grid-column-end: 3;
  width: calc(100% - 2px);
}

#chart-drawable {
  width: 100%;
  height: 100%;
  border-left: 1px solid var(--base01);
  border-bottom: 1px solid var(--base01);
  border-right: 1px solid var(--base01);
}

#alerts {
  grid-row-start: 2;
  grid-row-end: 3;
  grid-column-start: 1;
  grid-column-end: 3;
  display: flex;
  justify-content: center;
  align-items: center;
}

